# Bingo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: BingoTestLinux.yml  CLI.yml  CLILinux.yml  CLIMacOS.yml  CLIWindows.yml  Core.yml  CoreLinux.yml  CoreMacOS.yml  CoreTest.yml  CoreWindows.yml  SDL2.yml  SDL2Test.yml  Test.yml  TestLinux.yml  TestMacOS.yml  TestWindows.yml  UI.yml  UILinux.yml  UIMacOS.yml  UIWindows.yml  main.yml
BingoCLI/: CMakeLists.txt
BingoCLI/Include/: BingoCLI.hpp
BingoCLI/Source/: BingoCLI.cpp  Main.cpp
BingoCore/: CMakeLists.txt  Settings.ini
BingoCore/Include/: BingoException.hpp  Card.hpp  Drum.hpp  EmptyDrumException.hpp  Game.hpp  LinePrize.hpp  OutOfCreditsException.hpp  Player.hpp  Prize.hpp  PrizeSystem.hpp  Settings.hpp
BingoCore/Include/Prizes/: BingoPrize.hpp  DoubleLinePrize.hpp  LinePrize.hpp  Prize.hpp
BingoCore/Source/: Card.cpp  Drum.cpp  Game.cpp  LinePrize.cpp  Player.cpp  PrizeSystem.cpp  Settings.cpp
BingoCore/Source/Prizes/: BingoPrize.cpp  DoubleLinePrize.cpp  LinePrize.cpp
BingoTest/: CMakeLists.txt  CardTest.cpp  DrumTest.cpp  PlayerTest.cpp  PrizeSystemTest.cpp  Settings.ini  SettingsTest.cpp
BingoUI/: CMakeLists.txt  FindSDL2TTF.cmake  Settings.ini
BingoUI/Include/: AssetsManager.hpp  Bingo.hpp  BingoLevel.hpp  BingoUI.hpp  Button.hpp  CardUI.hpp  Config.hpp  Config.hpp.old  Drawable.hpp  DrumUI.hpp  Engine.hpp  Graphics.hpp  Level.hpp  Texture.hpp  Widget.hpp
BingoUI/Include/CustomWidgets/: CardUI.hpp  CloseButton.hpp  CobrarButton.hpp  CreditosLabel.hpp  DrumUI.hpp  JugarButton.hpp  MonedasButton.hpp  NumerosButton.hpp
BingoUI/Include/GUI/: ButtonWidget.hpp  ImageWidget.hpp  LabelWidget.hpp  Widget.hpp
BingoUI/Source/: AssetsManager.cpp  Bingo.cpp  BingoLevel.cpp  BingoUI.cpp  Button.cpp  ButtonWidget.cpp  CardUI.cpp  DrumUI.cpp  Engine.cpp  Graphics.cpp  LabelWidget.cpp  Main.cpp  Texture.cpp  Widget.cpp
BingoUI/Source/CustomWidgets/: CardUI.cpp  CloseButton.cpp  CobrarButton.cpp  CreditosLabel.cpp  DrumUI.cpp  JugarButton.cpp  MonedasButton.cpp  NumerosButton.cpp
BingoUI/Source/GUI/: ButtonWidget.cpp  ImageWidget.cpp  LabelWidget.cpp  Widget.cpp
